# uavf_2024

./: .coverage  .coveragerc  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  JetsonDockerfile  LICENSE  MAVLINK_NOTES.md  README.md  Untitled Diagram.drawio  checklist.md  esc_read.py  flight_instructions.md  gen_gpx.sh  gnc_tests.sh  image_setup.sh  imaging_tests.sh  package.xml  planTest.plan  pull_request_template.md  requirements.txt  ros_node_graph.drawio.html  run_docker.sh  run_docker_gui.sh  run_tests.sh  setup.py  setup_image.py  sim_instructions.md  tmux_spawn.sh
.devcontainer/: Dockerfile  bashrc_setup.sh  devcontainer.json
config/: sitl.parm
docs/: ros_node_graph.html
include/libuavf_2024/: README.md
launches/: imaging_demo.launch  imaging_multiple_demo.launch  perception_with_3d.launch
log_analysis/: .gitignore  graph_attitude_img_diff.py  graph_pose.py  graph_pose_img_diff.py  plot_timestamps.py  pose_log_replay.py  poses.csv  ros2_callback_demo.py  simple_pose_node.py  to_video.py
misc/: ros_node_graph.html
msg/: CommanderOutput.msg  Detection2D.msg  GpsAltitudePosition.msg  NedEnuOdometry.msg  NedEnuSetpoint.msg  NedEnuWaypoint.msg  TargetDetection.msg  UAVFPose.msg
px4_offboard_mpc/: README.md  conversions.py  ned_enu_conversions.py  node_offboard_control.py  node_px4_interface.py  sqp_nlmpc.py
scripts/: README.md  camera_log_test.py  camera_test_node.py  commander_node.py  controller_node.py  demo_commander_node.py  demo_dropzone_planner.py  demo_imaging_node.py  esc_read.py  image_process_node.py  imaging_node.py  imaging_node_cli.py  mavlink_console.py  mavlink_reciever.py  mavlink_sender.py  mock_imaging_node.py  perception_with_3d.py  pose_provider.py  px4_interface_node.py  record_camera_data.py  ros_log.sh  run_perception.py  stupid_test.py  telemetry_interface_node.py  test_camera.py  trajectory_planner_node.py  uavf_to_gpx.py  waypoint_tracker_node.py  world_pos.py
scripts/perception_clients/: .gitignore  continuous_image_taking.py  simple_print_pose.py  take_one_image.py  test_only_camera.py
siyi_sdk/: .gitignore  README.md  setup.py  temp.txt
siyi_sdk/dev/: camera_control.py  check_gimbal.py  stream_test.py  test.py  zoom_absolute.py  zoom_control.py
siyi_sdk/siyi_sdk/: __init__.py  mocks.py  siyi_message.py  siyi_sdk.py  siyi_stream.py  utils.py
siyi_sdk/tests/: test_center_gimbal.py  test_follow_mode.py
src/: README.md
srv/: GetAttitude.srv  GetFirstPose.srv  GetPose.srv  PointCam.srv  ProcessImage.srv  TakePicture.srv  ZoomCam.srv
test/: testcase_sqp_nlmpc.py  unittest_node_offboard.py  unittest_sqp_nlmpc.py
tests/: README.md  camera_calibration_test.py  conversions_unit_tests.py  imaging_camera_calibration_test.py  imaging_frontend_tests.py  imaging_integ_tests.py  imaging_target_tracker_tests.py  imaging_types_tests.py  imaging_utils_tests.py  letter_tests.py  replay_logs.py  target_tracker_tests.py  turn_angle_tests.py
tests/gnc/: dropzone_waypoint_planning_tests.py  mission_messages_tests.py  opportunistic_imaging_tests.py  stay_inside_geofence_tests.py
tests/imaging/: auc_tests.py  camera_transform_tests.py  closest_match_tests.py  color_classify_tests.py  drone_tracker_tests.py  general_classifier_tests.py  image_processor_tests.py  imaging_frontend_tests.py  imaging_types_tests.py  init_payload_tests.py  integ_tests.py  letter_tests.py  localization_visualization.ipynb  localizer_tests.py  lookup_stitcher_tests.py  one_shot_tests.py  one_shot_visualization.py  particle_filter_tests.py  run_localization.py  tracker_tests.py  util_tests.py
tests/imaging/imaging_data/: reblur_tile_data.py
tests/imaging_data/sim_dataset/: labels.txt
tests/tile_dataset/labels/: image952.txt  image960.txt  image962.txt  image966.txt  image968.txt  image970.txt  image971.txt  image982.txt  image986.txt  image987.txt  image988.txt  image992.txt  image993.txt  image995.txt  image997.txt
uavf_2024/: async_utils.py  utilization_logger.py
uavf_2024/gnc/: adv_control.py  commander_node.py  conversions.py  dropzone_planner.py  mission_messages.py  moveServo.py  payload.py  pyMavLinkPublisher.py  sqp_nlmpc.py  util.py
uavf_2024/gnc/data/: AIRDROP_BOUNDARY  PAYLOAD_LIST  PHOENIX_AIRDROP_BOUNDARY  PHOENIX_FLIGHT_BOUNDARY  PHOENIX_TEST_MISSION  SET_1  SET_2  SET_3  SET_4  TEST_MISSION  club_field.gpx  crawford_field.gpx  geofence_test.gpx  greatpark.gpx  main_field.gpx  main_field_east.gpx  maryland.gpx  primary.gpx  upper_field.gpx
uavf_2024/imaging/: AUC_heuristic.ipynb  AUC_heuristic.py  __init__.py  area_coverage.py  auc_heuristic.py  camera.py  camera_control.py  camera_model.py  collision_detection.py  drone_tracker.py  filterpy.py  image_processor.py  imaging_types.py  localizer.py  mock_camera.py  old_image_processor.py  particle_filter.py  perception.py  pose.py  serial_coms.py  target_tracker.py  temp.py  temp.txt  testing_purposes.py  tracker.py  utils.py  visual_3d.py  visualizations.py
uavf_2024/imaging/color_classification/: README.md  __init__.py  color_classify.py
uavf_2024/imaging/color_segmentation/: __init__.py  color_segment.py
uavf_2024/imaging/detection/: __init__.py  one_detector.py  shape_detector.py  yolo_detector.py
uavf_2024/imaging/general_classifier/: __init__.py  general_classifier.py  resnet.py
uavf_2024/imaging/geometric/: area_coverage.py  localizer.py  particle_filter.py  tracker.py
uavf_2024/imaging/letter_classification/: __init__.py  letter_classifier.py
uavf_2024/imaging/one_shot/: __init__.py  dataset.py  one_shot.py
uavf_2024/imaging/particle_filter/: drone_ssm.py
uavf_2024/imaging/shape_detection/: ShapeInstanceSegmentor.py  __init__.py  (+2 more)
uavf_2024/logging_utils/: async_utils.py  utilization_logging.py
(+657 files in other folders)
